[project]
name = "sweets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
